--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,6 @@
 ### .gitignore
 ```gitignore
-# Python
+backups/
+.pytest_cache/
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+venv/
