--- a/requirements.txt
+++ b/requirements.txt
@@ -17,25 +17,25 @@ flake8>=4.0.0,<7.0.0                     # Linting and style checking
 isort>=5.10.0,<6.0.0                     # Import sorting
 mypy>=1.0.0,<2.0.0                      # Static type checking
 
-# Documentation (optional)
-sphinx>=4.5.0,<8.0.0                     # Documentation generation
-sphinx-rtd-theme>=1.0.0,<2.0.0           # ReadTheDocs theme
+# # Documentation (optional)
+# sphinx>=4.5.0,<8.0.0                     # Documentation generation
+# sphinx-rtd-theme>=1.0.0,<2.0.0           # ReadTheDocs theme
 
-# CLI Enhancement (optional)
-click>=8.0.0,<9.0.0                      # Alternative CLI framework
-rich>=12.0.0,<14.0.0                     # Rich text and beautiful formatting
-colorama>=0.4.4,<1.0.0                   # Cross-platform colored terminal text
+# # CLI Enhancement (optional)
+# click>=8.0.0,<9.0.0                      # Alternative CLI framework
+# rich>=12.0.0,<14.0.0                     # Rich text and beautiful formatting
+# colorama>=0.4.4,<1.0.0                   # Cross-platform colored terminal text
 
-# Performance and Profiling (optional)
-memory-profiler>=0.60.0,<1.0.0           # Memory usage profiling
-line-profiler>=4.0.0,<5.0.0               # Line-by-line profiling
+# # Performance and Profiling (optional)
+# memory-profiler>=0.60.0,<1.0.0           # Memory usage profiling
+# line-profiler>=4.0.0,<5.0.0               # Line-by-line profiling
 
-# Security (optional)
-bandit>=1.7.0,<2.0.0                     # Security linter
-safety>=2.0.0,<3.0.0                     # Check for known security vulnerabilities
+# # Security (optional)
+# bandit>=1.7.0,<2.0.0                     # Security linter
+# safety>=2.0.0,<3.0.0                     # Check for known security vulnerabilities
 
-# Build and Distribution (optional)
-build>=0.8.0,<1.0.0                      # Build package
-twine>=4.0.0,<5.0.0                      # Upload to PyPI
-wheel>=0.37.0,<1.0.0                     # Wheel builder
-setuptools>=60.0.0,<70.0.0                # Package building
+# # Build and Distribution (optional)
+# build>=0.8.0,<1.0.0                      # Build package
+# twine>=4.0.0,<5.0.0                      # Upload to PyPI
+# wheel>=0.37.0,<1.0.0                     # Wheel builder
+# setuptools>=60.0.0,<70.0.0                # Package building
